--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "3.1.1",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.0.2",
-    "@tamagui/config": "^1.88.17",
-    "@tamagui/metro-plugin": "^1.88.17",
+    "@tamagui/config": "^1.88.18",
+    "@tamagui/lucide-icons": "^1.88.18",
+    "@tamagui/metro-plugin": "^1.88.18",
     "babel-preset-expo": "^10.0.1",
     "expo": "50.0.2",
     "expo-font": "~11.10.2",
@@ -31,10 +33,13 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
     "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "^0.19.9",
-    "tamagui": "^1.88.17"
+    "tamagui": "^1.88.18"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
